validation for spaces calculation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Course Booking System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    //Uses the Vue 2 CDN according to the CW requirements
+    <!--Uses the Vue 2 CDN according to the CW requirements -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 </head>
 <body>
