--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
             <div class="navigation">
                 <div class="nav-buttons">
-                    // lessons view button
+                    <!-- lessons view button -->
                     <button 
                         class="nav-btn" 
                         :class="{ active: currentView === 'lessons' }"
                         v-on:click="navigateTo('lessons')">
                         Courses
                     </button>
-                    //shows the number of items in the cart
+                    <!-- shows the number of items in the cart -->
                     <button 
                         class="nav-btn" 
                         :class="{ active: currentView === 'cart' }"
