--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <p>Thank you for your order. You will be redirected to courses page shortly.</p>
                             </div>
 
-                            <div v-else>
+                            <div v-else @submit.prevent="submitOrder">
                                 <div class="form-group">
                                     <label for="name">Full Name *</label>
                                     <input 
@@ -175,7 +175,7 @@
                                         :class="{ error: formErrors.name }"
                                         placeholder="Enter your full name"
                                         v-model="checkoutData.name"
-                                        v-on:input="validateForm">
+                                        v-on:input="validateForm" required>
                                     <div v-if="formErrors.name" class="error-message">
                                         {{ formErrors.name }}
                                     </div>
@@ -190,7 +190,7 @@
                                         :class="{ error: formErrors.phone }"
                                         placeholder="Enter your phone number"
                                         v-model="checkoutData.phone"
-                                        v-on:input="validateForm">
+                                        v-on:input="validateForm" required>
                                     <div v-if="formErrors.phone" class="error-message">
                                         {{ formErrors.phone }}
                                     </div>
