--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                     class="checkout-btn"
                                     v-on:click="submitOrder"
                                     :disabled="!isCheckoutValid">
-                                    Place Order - ${{ cartTotal }}
+                                    Checkout Order - ${{ cartTotal }}
                                 </button>
                             </div>
                         </div>
@@ -221,7 +221,7 @@
                     <div class="popup-backdrop"></div>
                     <div class="popup-content">
                         <div class="spinner"></div>
-                        <h3>Order is being successfully processed</h3>
+                        <h3>Order is being processed</h3>
                         <p>Please wait while we confirm your order...</p>
                     </div>
                 </div>
