--- a/main/index.html
+++ b/main/index.html
@@ -35,7 +35,7 @@
                         :class="{ active: currentView === 'cart' }"
                         v-on:click="navigateTo('cart')"
                         :disabled="cart.length === 0">
-                        Cart ({{ cart.length }})
+                        <i class="fas fa-shopping-cart"></i>Cart ({{ cart.length }})
                     </button>
                 </div>
 
