--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Provides vector icons that are used in the web application -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Links the css file -->
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <!--Uses Vue2 according to the CW requirement -->
     <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
     
@@ -242,6 +242,6 @@
         </div>
     </div>
     <!-- Loads the Vue javascript file -->
-    <script src="../javascript/app.js"></script>
+    <script src="javascript/app.js"></script>
 </body>
 </html>
